# KeepItHidden

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/controller/: main.c
src/initializer/: main.c
src/plugins/: algorithm_plugin.c  constant_plugin.c
